# juju-spell2

./: .gitignore  Makefile  pyproject.toml
juju_spell/: __main__.py  assignment.py  asyncio.py  container.py  errors.py  logger.py  settings.py  utils.py
juju_spell/assignment/: __init__.py  assignment.py  utils.py
juju_spell/cli/: __init__.py  cli.py  controller.py  model.py  output.py  ping.py  user.py
juju_spell/ops/: __init__.py  base.py  controller.py  model.py  ping.py  result.py  user.py
