[tool.poetry]
name = "juju-spell"
version = "0.1.0"
description = ""
authors = ["jneo8"]

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"
click = "^8.1.3"
pydantic = "^1.10.5"
loguru = "^0.6.0"
pyyaml = "^6.0"
typer = "^0.7.0"
juju = "2.9.11"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
colorama = "^0.4.6"
pylint = "^2.17.0"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["C901", "D100", "D101", "D102", "D103", "W503", "W504"]
exclude = ['.eggs', '.git', '.tox', '.venv', '.build', 'build', 'report']
max-line-length = 99
max-complexity = 10

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ['.eggs', '.git', '.tox', '.venv', '.build', 'build', 'report', 'tests']


[tool.black]
line-length = 99
exclude = '''
/(
    | .eggs
    | .git
    | .tox
    | .venv
    | .build
    | build
    | report
)/
'''
